--- a/src/TimeReporting/Pages/WorkTypes/Create.cshtml
+++ b/src/TimeReporting/Pages/WorkTypes/Create.cshtml
@@ -16,7 +16,7 @@
       <span asp-validation-for="WorkType.HourlyRate" class="text-danger"></span>
     </div>
     <div class="form-group">
-      <input type="submit" value="Create" class="btn btn-primary" />
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </form>
 </section>
