--- a/src/TimeReporting/Pages/Employees/Create.cshtml
+++ b/src/TimeReporting/Pages/Employees/Create.cshtml
@@ -33,13 +33,20 @@
       <input  asp-for="Employee.PhoneNumber" class="form-control"/>
       <span asp-validation-for="Employee.PhoneNumber" class="text-danger"></span>
     </div>
-    <div class="form-group mb-3">
-      <label asp-for="Employee.HireDate" class="control-label"></label>
-      <input asp-for="Employee.HireDate" class="form-control"/>
-      <span asp-validation-for="Employee.HireDate" class="text-danger"></span>
+    <div class="form-group row mb-3">
+      <div class="col-auto">
+        <label asp-for="Employee.JobTitle" class="control-label"></label>
+        <input  asp-for="Employee.JobTitle" class="form-control"/>
+        <span asp-validation-for="Employee.JobTitle" class="text-danger"></span>
+      </div>
+      <div class="col-auto">
+        <label asp-for="Employee.HireDate" class="control-label"></label>
+        <input asp-for="Employee.HireDate" class="form-control"/>
+        <span asp-validation-for="Employee.HireDate" class="text-danger"></span>
+      </div>
     </div>
     <div class="form-group">
-      <input type="submit" value="Create" class="btn btn-primary"/>
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </form>
 </section>
