--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -10,36 +10,47 @@
     Layout = "_RootLayout";
   }
 }
-<header class="flex-md-nowrap d-flex z-3 justify-content-end p-0 d-md-none" data-bs-theme="dark">
-  <ul class="navbar-nav flex-row">
-    <li class="nav-item text-nowrap">
-      <button class="nav-link px-3 text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
-        aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="bi bi-list h1"></i>
-      </button>
-    </li>
-  </ul>
-</header>
-<div class="container-fluid">
-  <div class="row">
-    <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary position-fixed" style="height: 100vh; overflow-y: auto;">
-      <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
-        aria-labelledby="sidebarMenuLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
-          @await Html.PartialAsync("_LoginPartial")
+@if (User.Identity.IsAuthenticated)
+{
+  <header class="flex-md-nowrap d-flex z-3 justify-content-end p-0 d-md-none" data-bs-theme="dark">
+    <ul class="navbar-nav flex-row">
+      <li class="nav-item text-nowrap">
+        <button class="nav-link px-3 text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
+                aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="bi bi-list h1"></i>
+        </button>
+      </li>
+    </ul>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary vh-100 position-fixed">
+        <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
+             aria-labelledby="sidebarMenuLabel">
+          <div class="offcanvas-header">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
+                    aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body d-md-flex flex-column pt-lg-3">
+            @await Html.PartialAsync("_LoginPartial")
+          </div>
         </div>
       </div>
+      <div class="col-md-3 col-lg-2"></div>
+      <main role="main" class="col" id="main">
+        @RenderBody()
+      </main>
     </div>
-    <div class="col-md-3 col-lg-2"></div>
-    <main role="main" class="col" id="main">
-      @RenderBody()
-    </main>
   </div>
-</div>
+}
+else
+{
+  <main class="d-flex justify-content-center align-items-center row">
+    @RenderBody()
+  </main>
+}
+
+
 @{
   var notificationMessage = TempData["Notification-Message"];
   var notificationStatus = TempData["Notification-Type"];
