Got started creating collapsable sidebar

--- a/src/TimeReporting/Pages/Customers/Index.cshtml
+++ b/src/TimeReporting/Pages/Customers/Index.cshtml
@@ -2,12 +2,11 @@
 @model IndexModel
 
 @{
-    ViewData["Title"] = "Customers";
     Layout = "_Layout";
 }
 
 
-<section class="container">
+<section class="container mt-3">
   <div class="d-flex justify-content-between">
     <h1 class="m-0">Customers</h1>
     <div class="d-flex gap-3">
