--- a/src/TimeReporting/Pages/Projects/Index.cshtml
+++ b/src/TimeReporting/Pages/Projects/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<section class="container">
+<section class="container mt-3">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="m-0">Projects</h1>
     <div class="d-flex gap-3">
