--- a/src/TimeReporting/wwwroot/css/site.css
+++ b/src/TimeReporting/wwwroot/css/site.css
@@ -117,3 +117,77 @@ body {
 #timer .alert {
   border-radius: 1rem;
 }
+
+.sidebar-nav {
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+.sidebar {
+  transition: all 0.3s ease;
+  width: 60px;
+}
+
+.sidebar:hover {
+  width: 250px
+}
+
+#timer{
+  width: 60px;
+  transition: all 0.3s ease;
+  padding: 6px;
+}
+
+.timer-text{
+  display: none;
+  transition: all 0.3s ease;
+  white-space: nowrap;
+}
+
+.sidebar:hover .timer-text{
+  display: inline-block;
+  transition: all 0.3s ease;
+  white-space: nowrap;
+}
+
+.sidebar:hover #timer{
+  width: 250px;
+  transition: all 0.3s ease;
+}
+
+
+.menu-text {
+  opacity: 0;
+  transition: all 0.3s ease;
+  white-space: nowrap;
+}
+
+.sidebar:hover .menu-text {
+  opacity: 1;
+}
+
+@media (min-width: 768px) {
+  .sidebar + .col-md-3 {
+    width: 60px
+  }
+  
+  .sidebar:hover + .col-md-3 {
+    width: 250px
+  }
+}
+
+
+.nav-link {
+  padding-left: 1rem;
+  white-space: nowrap;
+}
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    width: 100%
+  }
+  
+  .menu-text {
+    opacity: 1;
+  }
+}
