--- a/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
+++ b/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
@@ -8,12 +8,12 @@
         <div class="mb-3">
           <i class="bi bi-stopwatch display-5 text-muted"></i>
         </div>
-        <a class="btn btn-success d-flex w-100 rounded-pill"
+        <a class="btn btn-success d-flex justify-content-center align-items-center w-100 rounded-pill"
            up-target="#timer"
            asp-page="/Index"
            asp-page-handler="StartTimer">
-          <i class="bi bi-play-circle me-2"></i>
-          <span class="timer-text">
+          <i class="bi bi-play-circle m-0 p-0"></i>
+          <span class="timer-text ms-2">
             Start Timer
           </span>
         </a>
@@ -25,21 +25,29 @@
     <div id="timer" up-poll up-interval="60000">
       <div class="card border-0 bg-body-tertiary">
         <div class="card-body">
-          <div class="d-flex align-items-center justify-content-between">
-              <p class="mb-0 text-muted fs-5">
-                @if (Model.Duration.Hours > 0)
-                {
-                  <span><strong>@Model.Duration.Hours</strong> @(Model.Duration.Hours == 1 ? "hour" : "hours")</span>
-                }
-                <span><strong>@Model.Duration.Minutes</strong> @(Model.Duration.Minutes == 1 ? "minute" : "minutes")</span>
-              </p>
-            <div class="clock-wrapper ms-3">
+          <div class="d-flex flex-column gap-2 align-items-center justify-content-between">
+            <div class="clock-wrapper">
               <div class="clock"></div>
             </div>
+            <p class="mb-0 text-muted fs-5">
+              @if (Model.Duration.Hours > 0)
+              {
+                <span class="d-flex">
+                  <strong>@Model.Duration.Hours</strong>
+                  <span class="timer-text ps-2">@(Model.Duration.Hours == 1 ? "hour" : "hours")</span>
+                  <span class="timer-text-collapsed">h</span>
+                </span>
+              }
+              <span class="d-flex">
+                <strong>@Model.Duration.Minutes</strong>
+                <span class="timer-text ps-2">@(Model.Duration.Minutes == 1 ? "minute" : "minutes")</span>
+                <span class="timer-text-collapsed">m</span>
+              </span>
+            </p>
           </div>
         </div>
       </div>
-      <div class="mt-3">
+      <div>
         <a asp-page="/Index"
            asp-page-handler="StopTimer"
            up-target="#timer"
@@ -52,34 +60,44 @@
 
   case TimerStatus.Stopped:
     <div id="timer">
-      <div class="card border-0 bg-body-tertiary mb-3">
-        <div class="card-body text-center">
-          <div class="fs-5 py-3">
-            @if (Model.Duration.Hours > 0)
-            {
-              <span><strong>@Model.Duration.Hours</strong> @(Model.Duration.Hours == 1 ? "hour" : "hours")</span>
-            }
-            <span><strong>@Model.Duration.Minutes</strong> @(Model.Duration.Minutes == 1 ? "minute" : "minutes")</span>
+      <div class="card border-0 bg-body-tertiary">
+        <div class="card-body">
+          <div class="d-flex flex-column gap-2 align-items-center justify-content-between">
+            <p class="mb-0 text-muted fs-5">
+              @if (Model.Duration.Hours > 0)
+              {
+                <span class="d-flex">
+                <strong>@Model.Duration.Hours</strong>
+                <span class="timer-text ps-2">@(Model.Duration.Hours == 1 ? "hour" : "hours")</span>
+                <span class="timer-text-collapsed">h</span>
+              </span>
+              }
+              <span class="d-flex">
+              <strong>@Model.Duration.Minutes</strong>
+              <span class="timer-text ps-2">@(Model.Duration.Minutes == 1 ? "minute" : "minutes")</span>
+              <span class="timer-text-collapsed">m</span>
+            </span>
+            </p>
           </div>
         </div>
-      </div>
-      <div class="d-flex gap-2">
-        <a asp-page="/Reports/Create"
-           asp-route-hours="@Model.Duration.Hours"
-           asp-route-minutes="@Model.Duration.Minutes"
-           class="btn btn-success flex-grow-1 rounded-pill"
-           up-layer="new modal"
-           up-target="main"
-           up-history="false">
-          <i class="bi bi-plus-circle"></i>
-        </a>
-        <a asp-page="/Index"
-           asp-page-handler="DiscardTimer"
-           up-target="#timer"
-           up-confirm="Are you sure you want to discard this timer?"
-           class="btn btn-outline-danger flex-grow-1 rounded-pill">
-          <i class="bi bi-trash"></i>
-        </a>
+        <div class="d-flex flex-column gap-2">
+          <a asp-page="/Reports/Create"
+             asp-route-hours="@Model.Duration.Hours"
+             asp-route-minutes="@Model.Duration.Minutes"
+             class="btn btn-success rounded-pill"
+             up-layer="new modal"
+             up-target="main"
+             up-history="false">
+            <i class="bi bi-plus-circle"></i>
+          </a>
+          <a asp-page="/Index"
+             asp-page-handler="DiscardTimer"
+             up-target="#timer"
+             up-confirm="Are you sure you want to discard this timer?"
+             class="btn btn-outline-danger rounded-pill">
+            <i class="bi bi-trash"></i>
+          </a>
+        </div>
       </div>
     </div>
     break;
