huge refactoring where i made the code more maintainable.

--- a/src/TimeReporting/Pages/Customers/Index.cshtml
+++ b/src/TimeReporting/Pages/Customers/Index.cshtml
@@ -21,7 +21,7 @@
       </form>
       <a
         asp-page="Create"
-        up-layer="new drawer"
+        up-layer="new modal"
         up-position="right"
         up-history="false"
         up-accept-location="/Customers"
