--- a/src/TimeReporting/Pages/Customers/Edit.cshtml
+++ b/src/TimeReporting/Pages/Customers/Edit.cshtml
@@ -1,34 +1,23 @@
 @page
-@model EditModel
+@model TimeReporting.Pages.Customers.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "_Layout";
 }
 
-<h1>Edit</h1>
-
-<h4>Customer</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Customer.Id" />
-            <div class="form-group">
-                
-                <label asp-for="Customer.Name" class="control-label"></label>
-                <input asp-for="Customer.Name" class="form-control" />
-                <span asp-validation-for="Customer.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+<section>
+    <h2>Edit Customer</h2>
+    <hr />
+    <form method="post" up-target="main">
+        <input type="hidden" asp-for="Customer.Id" />
+        
+        <div class="mb-3">
+            <label asp-for="Customer.Name" class="form-label">Name</label>
+            <input asp-for="Customer.Name" class="form-control" />
+            <span asp-validation-for="Customer.Name" class="text-danger"></span>
+        </div>
+        <button type="submit" class="btn btn-primary">Save</button>
+        @Html.AntiForgeryToken()
+    </form>
+</section>
 
