--- a/src/TimeReporting/Pages/Employees/Index.cshtml
+++ b/src/TimeReporting/Pages/Employees/Index.cshtml
@@ -46,11 +46,11 @@
       <div class="table-responsive">
         <table class="table table-hover align-middle mb-0">
           <thead>
-            <tr class="text-muted small text-uppercase">
-              <th class="fw-medium ps-0">Employee Name</th>
-              <th class="fw-medium">Job Title</th>
-              <th class="fw-medium">Hire Date</th>
-              <th class="text-end pe-0"></th>
+            <tr>
+              <th>Employee Name</th>
+              <th>Job Title</th>
+              <th>Hire Date</th>
+              <th></th>
             </tr>
           </thead>
           <tbody class="border-top">
