--- a/src/TimeReporting/Pages/Projects/Edit.cshtml
+++ b/src/TimeReporting/Pages/Projects/Edit.cshtml
@@ -5,38 +5,37 @@
     Layout = "_Layout";
 }
 
-<h4>Project</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Project.Id" />
-            <div class="form-group">
-                
-                <label asp-for="Project.Name" class="control-label"></label>
-                <input asp-for="Project.Name" class="form-control" />
-                <span asp-validation-for="Project.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                
-                <label asp-for="Project.Description" class="control-label"></label>
-                <input asp-for="Project.Description" class="form-control" />
-                <span asp-validation-for="Project.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                
-                <label asp-for="Project.CustomerId" class="control-label"></label>
-                <select asp-for="Project.CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
-                <span asp-validation-for="Project.CustomerId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<section>
+  <h2>Edit Project</h2>
+  <hr>
+  <form method="post" up-target="main">
+    <input type="hidden" asp-for="Project.Id" />
+    
+    <div class="mb-3">
+      <label asp-for="Project.Name" class="form-label">Name</label>
+      <input asp-for="Project.Name" class="form-control" />
+      <span asp-validation-for="Project.Name" class="text-danger"></span>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div class="mb-3">
+      <label asp-for="Project.Description" class="form-label">Description</label>
+      <textarea asp-for="Project.Description" class="form-control" rows="3"></textarea>
+      <span asp-validation-for="Project.Description" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+      <label asp-for="Project.CustomerId" class="form-label">Customer</label>
+      <select asp-for="Project.CustomerId" class="form-select">
+        <option value="">Select a Customer</option>
+        @foreach (var customer in Model.Customers)
+        {
+            <option value="@customer.Id">@customer.Name</option>
+        }
+      </select>
+      <span asp-validation-for="Project.CustomerId" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
+    @Html.AntiForgeryToken()
+  </form>
+</section>
