--- a/src/TimeReporting/Pages/WorkTypes/Index.cshtml
+++ b/src/TimeReporting/Pages/WorkTypes/Index.cshtml
@@ -45,10 +45,10 @@
       <div class="table-responsive">
         <table class="table table-hover align-middle mb-0">
           <thead>
-            <tr class="text-muted small text-uppercase">
-              <th class="fw-medium ps-0">Name</th>
-              <th class="fw-medium">Hourly Rate</th>
-              <th class="text-end pe-0"></th>
+            <tr>
+              <th>Name</th>
+              <th>Hourly Rate</th>
+              <th></th>
             </tr>
           </thead>
           <tbody class="border-top">
@@ -62,6 +62,9 @@
                      asp-page="./Edit"
                      up-layer="new drawer"
                      up-position="right"
+                     up-accept-location="/WorkTypes"
+                     up-on-accepted="up.reload('.worktypes')"
+                     up-history="false"
                      asp-route-id="@workType.Id">
                     <i class="bi bi-pencil"></i>
                     <span class="d-none d-md-inline ms-1">Edit</span>
