--- a/src/TimeReporting/Pages/Reports/Index.cshtml
+++ b/src/TimeReporting/Pages/Reports/Index.cshtml
@@ -53,6 +53,7 @@
               <th>Project</th>
               <th>Hours</th>
               <th>Work type</th>
+              <th>Employee</th>
               <th></th>
             </tr>
           </thead>
@@ -68,6 +69,9 @@
                 </td>
                 <td>
                   <span class="text-muted">@timeEntry.WorkType</span>
+                </td>
+                <td>
+                  @timeEntry.EmployeeName
                 </td>
                 <td>
                   <div class="d-flex gap-2 justify-content-end">
